<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sami.pahkthecah.RedirectFromGrid"
    android:background="#000000">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ToLocationTypeMenu"
        android:id="@+id/ToLocationType"
        android:layout_marginTop="100dp"
        android:textSize="20dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:layout_centerHorizontal="true"
        android:paddingRight="50dp"
        android:paddingLeft="50dp"
        android:background="#99d4ff"
        android:textColor="#000000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ToLogOutScreen"
        android:id="@+id/LogOutButton"
        android:layout_below="@+id/ToLocationType"
        android:layout_marginTop="50dp"
        android:textSize="20dp"
        android:layout_alignRight="@+id/ToLocationType"
        android:layout_alignEnd="@+id/ToLocationType"
        android:layout_alignLeft="@+id/ToLocationType"
        android:layout_alignStart="@+id/ToLocationType"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:background="#99d4ff"
        android:textColor="#000000" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CancelAction"
        android:id="@+id/CancelButton"
        android:layout_below="@+id/LogOutButton"
        android:layout_marginTop="50dp"
        android:textSize="20dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:layout_alignRight="@+id/LogOutButton"
        android:layout_alignEnd="@+id/LogOutButton"
        android:layout_alignLeft="@+id/LogOutButton"
        android:layout_alignStart="@+id/LogOutButton"
        android:background="#99d4ff"
        android:textColor="#000000" />
</RelativeLayout>