<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.margaretann.pahkthecah.aboutAquarium"
    tools:showIn="@layout/activity_main"
    android:background="#000000">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/aquariumpage"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="28dp"
        android:id="@+id/LocationName"
        android:focusableInTouchMode="true"
        android:focusable="false"
        android:textColor="#ffffff"
        android:typeface="serif"
        android:textIsSelectable="true"
        android:autoText="false"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LocationImage"
        android:maxHeight="200dp"
        android:maxWidth="300dp"
        android:adjustViewBounds="true"
        android:src="@drawable/aquarium"
        android:scaleType="fitCenter"
        android:layout_below="@+id/LocationName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:longClickable="true"
        android:minHeight="150dp"
        android:minWidth="150dp"
        android:backgroundTint="#fefefe"
        android:cropToPadding="false" />

    <TextView
        android:layout_width="340dp"
        android:layout_height="200dp"
        android:text="@string/aboutaquarium"
        android:id="@+id/LocationBlurb"
        android:layout_below="@+id/LocationImage"
        android:typeface="serif"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:textSize="18dp"
        android:textColor="#ffffff"
        android:textIsSelectable="true"
        android:maxHeight="150dp"
        android:scrollIndicators="right"
        android:textAlignment="center" />

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:id="@+id/googleButton"
        android:background="#99d4ff"
        android:text="@string/to_map_button"
        android:textSize="18dp"
        android:typeface="serif"
        android:textColor="#000000"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />
</RelativeLayout>
